--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <h1>Book Finder</h1>
+    <p>List of Tags</p>
+    <button class="btn" id="tag-btn">Show Tags</button>
+    <div id="tagList">
+    <!-- List of Tags to go here-->
+    </div>
     <input id="search-bar" type="text" placeholder="Search for books by tags">
     <button class="btn" id="search-btn">Search</button>
     <div id="bookList">
